--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../CSS/login/geralLog.css">
+    <link rel="stylesheet" href="../../CSS/geral/geral.css">
     <title>RLM - criar conta</title>
 </head>
 <body>
