--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -94,9 +94,9 @@
                             <div id="squareMaterial">
                                 <!--Quadradinho dos produtos-->
                                 <div class="materialContainer">
-                                    <div class="componentMaterial dentifyMaterial">
-                                        <h2>Material</h2>
-                                        <span>Papelão</span>
+                                    <div class="componentMaterial">
+                                        <h2>Material Papelão</h2>
+                                        <input type="checkbox" name="" id="">
                                     </div>
                                     <div class="componentMaterial">
                                         <h2>Valor</h2>
@@ -104,6 +104,8 @@
                                         <span>R$ por KG</span>
                                     </div>
                                 </div>
+                                
+                                
 
                             </div>
                         </div>
