--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -140,7 +140,7 @@
                     <!--Card Empresa-->
                 <div class="campo">
                     <input type="submit" value="Criar conta">
-                    <span class="textBasic" class="logWay">Já tenho conta</span>
+                    <span class="textBasic" class="logWay join">Já tenho conta</span>
                 </div>
                 <div class="campo" style="display:none">
                     <input type="submit" value="Entrar">
