--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -138,13 +138,13 @@
                 </div>
                     
                     <!--Card Empresa-->
-                <div class="campo">
+                <div class="campo" id="containerCreateAcount">
                     <input type="submit" value="Criar conta">
-                    <span class="textBasic" class="logWay join">Já tenho conta</span>
+                    <span class="textBasic" id="login">Já tenho conta</span>
                 </div>
-                <div class="campo"  style="display:none">
+                <div class="campo" id="containerLoginAcount"  style="display:none">
                     <input type="submit" value="Entrar">
-                    <span class="textBasic"  class="logWay">Criar Conta</span>
+                    <span class="textBasic"  id="create">Criar Conta</span>
                 </div>
 
             </form>
