--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -96,11 +96,11 @@
                                     <div class="materialContainer">
                                         <div class="componentMaterial">
                                             <h2>Material Papelão</h2>
-                                            <input type="checkbox" name="" id="">
+                                            <input type="checkbox" name="" id="" class="materialOpt">
                                         </div>
                                         <div class="componentMaterial">
                                             <h2>Valor</h2>
-                                            <input type="number" min="1">
+                                            <input type="number" min="1" class="materialValue">
                                             <span>R$ por KG</span>
                                         </div>
                                     </div>
