--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -81,9 +81,9 @@
                     <label for="">Senha:</label>
                     <input type="text" required>
                 </div>
-                <div class="campo">
+                <div class="campo" id="emailBoxText">
                     <label for="">Email:</label>
-                    <input type="email" required>
+                    <input type="email"  required>
                 </div>
                     <!--Card Empresa-->
                     <div class="formEmpresa" style="display: none;">
