--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="../../CSS/geral/geral.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <script src="../../JS/login.js" defer></script>
-    <title>RLM - criar conta</title>
+    <script src="../../JS/login/login.js" defer></script>
+    <title>LRM - criar conta</title>
 </head>
 <body>
     <header>
-        <h1>RLM</h1>
-        <div class="containerMenu">
+        <h1>LRM</h1>
+        <div class="containerMenu" id="menuBtn">
             <span class="material-symbols-outlined btnMenu">
                 menu
                 </span>
         </div>
-        <nav>
+        <nav class="none">
             <ul>
                 <li>Opt 1</li>
                 <li>Opt 2</li>
@@ -75,15 +75,15 @@
             <form action="">
                 <div class="campo">
                     <label for="">Usuário:</label>
-                    <input type="text" required>
+                    <input type="text" class="inputContent" >
                 </div>
                 <div class="campo">
                     <label for="">Senha:</label>
-                    <input type="text" required>
+                    <input type="text" class="inputContent" >
                 </div>
                 <div class="campo" id="emailBoxText">
                     <label for="">Email:</label>
-                    <input type="email"  required>
+                    <input type="email" class="inputContent"  >
                 </div>
                     <!--Card Empresa-->
                     <div class="formEmpresa" style="display: none;">
@@ -139,12 +139,12 @@
                     
                     <!--Card Empresa-->
                 <div class="campo" id="containerCreateAcount">
-                    <input type="submit" value="Criar conta">
-                    <span class="textBasic" id="login">Já tenho conta</span>
+                    <input type="submit" value="Criar conta" id="createSub">
+                    <span class="textBasic changeWay" id="login">Já tenho conta</span>
                 </div>
                 <div class="campo" id="containerLoginAcount"  style="display:none">
-                    <input type="submit" value="Entrar">
-                    <span class="textBasic"  id="create">Criar Conta</span>
+                    <input type="submit" value="Entrar" id="loginSub">
+                    <span class="textBasic changeWay"  id="create">Criar Conta</span>
                 </div>
 
             </form>
