--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="../../JS/login/login.js" defer></script>
+    <script src="../../JS/geral/geral.js" defer></script>
     <title>LRM - criar conta</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
                 menu
                 </span>
         </div>
-        <nav class="none">
+        <nav class="navBar">
             <ul>
                 <li>Opt 1</li>
                 <li>Opt 2</li>
