--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -19,7 +19,7 @@
                 menu
                 </span>
         </div>
-        <nav class="navBar">
+        <nav>
             <ul>
                 <li>Opt 1</li>
                 <li>Opt 2</li>
