--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -49,19 +49,19 @@
                 <!--DESKTOP SCREEN-->
                 <div class="desktop">
                     <section class="buttonsLine">
-                        <div class="SquareEffect defaultControl">
-                            <button>
-                                a
-                            </button>
-                        </div>
-                        <div class="SquareEffect defaultControl">
-                            <button>
-                                a
+                        <div class="SquareEffect">
+                            <button class="btn defaultControl btnComputer">
+                                Coletor
                             </button>
                         </div>
                         <div class="SquareEffect">
-                            <button>
-                                a
+                            <button class="btn defaultControl btnComputer">
+                                Acumulador
+                            </button>
+                        </div>
+                        <div class="SquareEffect">
+                            <button class="btn btnComputer">
+                                Empresa
                             </button>
                         </div>
                     </section>
