--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -51,7 +51,7 @@
                 <div class="desktop">
                     <section class="buttonsLine btnLineDesk">
                         <div class="SquareEffect">
-                            <button class="btn defaultControl btnComputer">
+                            <button attr='coletor' class="btn defaultControl btnComputer">
                                 Coletor
                             </button>
                         </div>
@@ -73,6 +73,10 @@
                 </h2>
 
                 <form action="">
+                    <div class="campo selectedInput">
+                        <label for="">Opção selecionada:</label>
+                        <input type="text" class="inputContent" >
+                    </div>
                     <div class="campo">
                         <label for="">Usuário:</label>
                         <input type="text" class="inputContent" >
