--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -22,7 +22,11 @@
         </div>
         <nav>
             <ul>
-                <li id="closeMenu">X</li>
+                <li id="closeMenu">
+                    <span class="material-symbols-outlined">
+                        close
+                        </span>
+                </li>
                 <li>Opt 1</li>
                 <li>Opt 2</li>
                 <li>Opt 3</li>
@@ -75,7 +79,7 @@
                 <form action="">
                     <div class="campo selectedInput">
                         <label for="">Opção selecionada:</label>
-                        <input type="text" class="inputContent" >
+                        <input type="text" class="inputContent" readonly>
                     </div>
                     <div class="campo">
                         <label for="">Usuário:</label>
