--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -27,9 +27,12 @@
                         close
                         </span>
                 </li>
-                <li>Opt 1</li>
-                <li>Opt 2</li>
-                <li>Opt 3</li>
+                <li>
+                    <a href="">Opt 1</a>
+                </li>
+                <li>
+                    <a href="">Opt 2</a>
+                </li>
             </ul>
         </nav>
     </header>
