--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -75,7 +75,7 @@
                     </section>
                 </div>
                 
-                <h2 class="textBasic textIndentify">
+                <h2 class="textBasic mobile textIndentify">
                     <span class="destaque">xxx</span>, ...
                 </h2>
 
@@ -107,10 +107,11 @@
                 </form>
                 
             </section>
-        <section id="squareBonecos">
-            <h2>Teste</h2>
-
-        </section>
+            <div id="imgBackground" class="desktop">
+                <h2>Teste</h2>
+                <img src="" alt="" id="boneco">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloribus maiores blanditiis, minus dolor modi id pariatur ipsum enim esse facilis deserunt hic harum accusantium ratione illum ducimus unde quasi.</p>
+            </div>
     </main>
 </body>
 </html>
