--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -28,10 +28,10 @@
                         </span>
                 </li>
                 <li>
-                    <a href="">Opt 1</a>
+                    <a href="../login/login.html">Conta</a>
                 </li>
                 <li>
-                    <a href="">Opt 2</a>
+                    <a href="../login/sobre.html">Sobre nós</a>
                 </li>
             </ul>
         </nav>
@@ -108,9 +108,8 @@
                 
             </section>
             <div id="imgBackground" class="desktop">
-                <h2>Teste</h2>
+                <h2 id="personSelected"></h2>
                 <img src="" alt="" id="boneco">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloribus maiores blanditiis, minus dolor modi id pariatur ipsum enim esse facilis deserunt hic harum accusantium ratione illum ducimus unde quasi.</p>
             </div>
     </main>
 </body>
