--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -27,10 +27,10 @@
                         </span>
                 </li>
                 <li>
-                    <a href="">Opt 1</a>
+                    <a href="../login/login.html">Entrar ou criar conta</a>
                 </li>
                 <li>
-                    <a href="">Opt 2</a>
+                    <a href="../login/sobre.html">Sobre</a>
                 </li>
             </ul>
         </nav>
@@ -74,7 +74,7 @@
                     </section>
                 </div>
                 
-                <h2 class="textBasic textIndentify">
+                <h2 class="textBasic textIndentify mobile">
                     <span class="destaque">xxx</span>, ...
                 </h2>
 
@@ -107,7 +107,7 @@
                 
             </section>
             <div id="imgBackground" class="desktop">
-                <h2>Teste</h2>
+                <h2 id="titleSelected">Teste</h2>
                 <img src="" alt="" id="boneco">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloribus maiores blanditiis, minus dolor modi id pariatur ipsum enim esse facilis deserunt hic harum accusantium ratione illum ducimus unde quasi.</p>
             </div>
