--- a/pags/login/sobre.html
+++ b/pags/login/sobre.html
@@ -26,10 +26,10 @@
                         </span>
                 </li>
                 <li>
-                    <a href="">Opt 1</a>
+                    <a href="../login/login.html">Entrar ou criar conta</a>
                 </li>
                 <li>
-                    <a href="">Opt 2</a>
+                    <a href="../login/sobre.html">Sobre</a>
                 </li>
             </ul>
         </nav>
