--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -36,13 +36,13 @@
                 <!--MOBILE SCREEN-->
                 <div class="mobile">
                     <section class="buttonsLine">
-                            <button class="btn defaultControl">
+                            <button text="coletor" class="btn defaultControl">
                                 Coletor
                             </button>
-                            <button class="btn defaultControl">
+                            <button text="acumulador" class="btn defaultControl">
                                 Acumulador
                             </button>
-                            <button class="btn">
+                            <button text="empresa" class="btn">
                                 Empresa
                             </button>
                     </section>
@@ -51,17 +51,17 @@
                 <div class="desktop">
                     <section class="buttonsLine btnLineDesk">
                         <div class="SquareEffect">
-                            <button class="btn defaultControl btnComputer">
+                            <button text="coletor" class="btn defaultControl btnComputer">
                                 Coletor
                             </button>
                         </div>
                         <div class="SquareEffect">
-                            <button class="btn defaultControl btnComputer">
+                            <button text="acumulador" class="btn defaultControl btnComputer">
                                 Acumulador
                             </button>
                         </div>
-                        <div class="SquareEffect">
-                            <button class="btn btnComputer">
+                        <div  class="SquareEffect">
+                            <button text="empresa" class="btn btnComputer">
                                 Empresa
                             </button>
                         </div>
@@ -97,8 +97,11 @@
                 
             </section>
         <section id="squareBonecos">
-            <h2>Teste</h2>
+            <h2>Nome do cara</h2>
+            <div id="containerImg">
 
+            </div>
+            <p id="descricao"></p>
         </section>
     </main>
 </body>
