--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -29,7 +29,7 @@
                     <a href="../login/login.html">Entrar ou criar conta</a>
                 </li>
                 <li>
-                    <a href="../login/sobre.html">Sobre</a>
+                    <a href="../sobre/sobre.html">Sobre</a>
                 </li>
             </ul>
         </nav>
@@ -74,7 +74,7 @@
                 </div>
                 
                 <h2 class="textBasic textIndentify mobile">
-                    <span class="destaque">xxx</span>, ...
+                    <span class="destaqueCareer">xxx</span>, ...
                 </h2>
 
                 <form action="">
@@ -107,7 +107,7 @@
             </section>
             <div id="imgBackground" class="desktop">
                 <h2 id="titleSelected">Teste</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloribus maiores blanditiis, minus dolor modi id pariatur ipsum enim esse facilis deserunt hic harum accusantium ratione illum ducimus unde quasi.</p>
+                <p id="textCareer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum doloribus maiores blanditiis, minus dolor modi id pariatur ipsum enim esse facilis deserunt hic harum accusantium ratione illum ducimus unde quasi.</p>
             </div>
     </main>
 </body>
