--- a/pags/sobre/sobre.html
+++ b/pags/sobre/sobre.html
@@ -29,7 +29,7 @@
                     <a href="../login/login.html">Entrar ou criar conta</a>
                 </li>
                 <li>
-                    <a href="../login/sobre.html">Sobre</a>
+                    <a href="../sobre/sobre.html">Sobre</a>
                 </li>
             </ul>
         </nav>
