--- a/pags/sobre/sobre.html
+++ b/pags/sobre/sobre.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../CSS/login/geralLog.css">
     <link rel="stylesheet" href="../../CSS/geral/geral.css">
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="../../JS/geral/geral.js" defer></script>
-    <title>LRM - Sobre nós</title>
+    <title>LRM - criar conta</title>
 </head>
 <body>
     <header>
-        <span></span>
-        <h1>LRM</h1>
+        <div style="width: 300px; display: flex; flex-direction: row; align-items: center;">
+            <h1>LRM</h1>
+            <img style="width: 50px; height: 50px;" src="../../img/IMG_7547.PNG" alt="">
+        </div>
         <div class="containerMenu" id="menuBtn">
             <span class="material-symbols-outlined btnMenu">
                 menu
@@ -34,8 +36,5 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <!--Content-->
-    </main>    
 </body>
 </html>
