--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -12,14 +12,16 @@
 </head>
 <body>
     <header>
-        <div style="width: 300px; display: flex; flex-direction: row; align-items: center;">
-            <h1>LRM</h1>
-            <img style="width: 50px; height: 50px;" src="../../img/IMG_7547.PNG" alt="">
-        </div>
-        <div class="containerMenu" id="menuBtn">
-            <span class="material-symbols-outlined btnMenu">
-                menu
-                </span>
+        <div class="head">
+            <div style="width: 300px; display: flex; flex-direction: row; align-items: center;">
+                <h1>LRM</h1>
+                <img style="width: 50px; height: 50px;" src="../../img/IMG_7547.PNG" alt="">
+            </div>
+            <div class="containerMenu" id="menuBtn">
+                <span class="material-symbols-outlined btnMenu">
+                    menu
+                    </span>
+            </div>
         </div>
         <nav>
             <ul>
