--- a/pags/sobre/sobre.html
+++ b/pags/sobre/sobre.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../CSS/login/geralLog.css">
     <link rel="stylesheet" href="../../CSS/geral/geral.css">
+    <link rel="stylesheet" href="../../CSS/sobre/sobre.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="../../JS/geral/geral.js" defer></script>
+    <script src="../../JS/sobre/sobre.js" defer></script>
     <title>LRM - criar conta</title>
 </head>
 <body>
     <header>
-        <div style="width: 300px; display: flex; flex-direction: row; align-items: center;">
-            <h1>LRM</h1>
-            <img style="width: 50px; height: 50px;" src="../../img/IMG_7547.PNG" alt="">
-        </div>
-        <div class="containerMenu" id="menuBtn">
-            <span class="material-symbols-outlined btnMenu">
-                menu
-                </span>
+        <div class="head">
+            <div style="width: 300px; display: flex; flex-direction: row; align-items: center;">
+                <h1>LRM</h1>
+                <img style="width: 50px; height: 50px;" src="../../img/IMG_7547.PNG" alt="">
+            </div>
+            <div class="containerMenu" id="menuBtn">
+                <span class="material-symbols-outlined btnMenu">
+                    menu
+                    </span>
+            </div>
         </div>
         <nav>
             <ul>
@@ -35,6 +38,39 @@
                 </li>
             </ul>
         </nav>
+        <section id="Bg">
+            <div class="imgContainer">
+                <div class="img1sobre">
+
+                </div>
+                <div class="img2sobre">
+
+                </div>
+            </div>
+            <!--TEMPLATE BLACK-->
+            <div class="template">
+                <div class="buttons-slide">
+                    <button class="btnSlideMove">
+                        <span class="material-symbols-outlined">
+                            <span class="material-symbols-outlined" id="btnLeft">
+                                arrow_back_ios
+                                </span>
+                            </span>
+                    </button>
+                    <button class="btnCareer">
+                        Seja um <span id="nameCareer"></span>
+                    </button>
+                    <button class="btnSlideMove">
+                        <span class="material-symbols-outlined" id="btnRight">
+                            arrow_forward_ios
+                            </span>
+                    </button>
+                </div>
+            </div>
+        </section>
     </header>
+    <main>
+        
+    </main>
 </body>
 </html>
