--- a/pags/sobre/sobre.html
+++ b/pags/sobre/sobre.html
@@ -14,7 +14,10 @@
     <header>
         <div class="head">
             <div style="width: 300px; display: flex; flex-direction: row; align-items: center;">
-                <h1>LRM</h1>
+                <div style="text-align: center;">
+                    <span>L.R.M</span>
+                    <div>Teste</div>
+                </div>
                 <img style="width: 50px; height: 50px;" src="../../img/IMG_7547.PNG" alt="">
             </div>
             <div class="containerMenu" id="menuBtn">
@@ -70,7 +73,17 @@
         </section>
     </header>
     <main>
-        
+        <section>
+            <div>
+                <img src="" alt="">
+                <div>
+                    <h2></h2>
+                </div>
+            </div>
+            <div>
+                
+            </div>
+        </section>
     </main>
 </body>
 </html>
