--- a/pags/sobre/sobre.html
+++ b/pags/sobre/sobre.html
@@ -53,9 +53,9 @@
             <!--TEMPLATE BLACK-->
             <div class="template">
                 <div class="buttons-slide">
-                    <button class="btnSlideMove">
+                    <button class="btnSlideMove" id="btnLeft">
                         <span class="material-symbols-outlined">
-                            <span class="material-symbols-outlined" id="btnLeft">
+                            <span class="material-symbols-outlined" >
                             arrow_back_ios
                                 </span>
                             </span>
@@ -63,8 +63,8 @@
                     <button class="btnCareer">
                         Seja um <span id="nameCareer"></span>
                     </button>
-                    <button class="btnSlideMove">
-                        <span class="material-symbols-outlined" id="btnRight">
+                    <button class="btnSlideMove" id="btnRight">
+                        <span class="material-symbols-outlined" >
                             arrow_forward_ios
                             </span>
                     </button>
