--- a/pags/sobre/sobre.html
+++ b/pags/sobre/sobre.html
@@ -73,46 +73,60 @@
         </section>
     </header>
     <main>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorum maxime ut accusantium voluptas molestias porro. Laboriosam ut iste, quos voluptatibus velit at nihil aut illo omnis. Minima beatae iste, ab quisquam distinctio sed sunt molestias accusamus ex repudiandae saepe nesciunt ipsum rerum ut facilis nobis quidem, quo qui, quos atque? Ullam quisquam nemo itaque explicabo. Porro deserunt sint eaque architecto facilis sed officia vero ut facere soluta? Sint alias eius suscipit excepturi minima eaque explicabo, molestias beatae quas est molestiae dicta sapiente, porro ullam ex placeat a maiores provident! Dignissimos explicabo eaque enim itaque tenetur corporis aliquid vitae veritatis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque doloribus magnam, voluptas veritatis porro ducimus cum. Magni, in dignissimos eius vero, numquam iure reprehenderit inventore corrupti aut expedita laboriosam? Tempore adipisci iste fuga laboriosam alias et eligendi optio perferendis, officiis culpa eaque nihil ab harum reprehenderit quia in! Ullam delectus quod debitis sint aut nobis corporis minima maiores deleniti at, dolorum, provident modi magnam, ab architecto accusantium excepturi vel quos cum dolores expedita alias officia. Recusandae deleniti cum nostrum placeat praesentium eveniet, minus consectetur sapiente accusamus provident nulla eos mollitia excepturi sequi veritatis consequatur doloribus, molestiae, dolorum quibusdam? Numquam nesciunt distinctio iusto repellendus quod perspiciatis nobis beatae mollitia iste corrupti officia sint, enim dolorem reprehenderit aut adipisci voluptatibus blanditiis alias qui a incidunt totam excepturi quidem accusantium? Beatae, repudiandae placeat atque iusto voluptatibus modi iure ipsum tempora itaque libero omnis tempore voluptatum at maiores suscipit mollitia sed nisi corrupti! Accusamus a distinctio excepturi ad hic explicabo laboriosam impedit voluptas neque molestiae, sit quas atque, harum id consequatur cupiditate veniam architecto voluptates odio modi, necessitatibus ea maxime. Pariatur aut eligendi velit rerum accusantium, accusamus repellat quaerat minima delectus fugiat eos quam deserunt incidunt, dolorem quae laborum. Similique temporibus doloribus, ducimus, dicta exercitationem enim repellendus fuga distinctio ratione porro assumenda iste eos voluptatem odit harum ad qui minus optio. Natus commodi nemo deserunt tempora accusantium fuga, nulla quod atque in, quasi voluptatibus vitae quas vero rem consequuntur ad officia esse quia autem deleniti, ullam obcaecati ex. Accusamus vitae repellendus reprehenderit natus minus ipsam ea ratione magnam magni voluptates itaque rerum asperiores repellat, ut quo? Eaque, odit, saepe quam inventore quidem earum maxime reiciendis ea itaque ducimus dolorum tenetur autem, rerum non optio unde maiores numquam distinctio a. Suscipit minus, odit distinctio voluptate similique numquam. Earum incidunt itaque quod magni quam corporis necessitatibus omnis sequi. Tempore consequuntur ea quam, necessitatibus facere eveniet quibusdam quisquam pariatur laboriosam incidunt debitis accusantium illo saepe distinctio minus laudantium voluptate aperiam ipsa. Deleniti adipisci illo nemo consequatur. Sequi tempora ex laborum suscipit beatae debitis, ducimus natus iure, rem facere odio fuga quo voluptate vero blanditiis eos. Sequi, iusto dicta! Eligendi porro ab assumenda, provident eius veniam pariatur! Vitae modi rerum autem non optio quod quasi expedita aliquam eligendi! Sit minus magni quia neque quis aspernatur in magnam deserunt corporis ullam consequatur adipisci rerum vero consequuntur, vel voluptatibus deleniti voluptatem voluptate fuga laboriosam dolores ab iure! Atque consectetur nihil rerum beatae quasi reprehenderit perspiciatis facilis autem voluptas delectus similique, perferendis odit cumque ipsum necessitatibus. Vitae tempore quis, architecto atque a hic ab dolorem et deleniti sed rerum dolores deserunt nemo quaerat facilis facere ipsam ducimus ex illum obcaecati. Odio itaque veniam illum? Beatae voluptatum, in ipsum tempore iste praesentium porro quaerat ducimus iure fugiat, soluta aliquid recusandae aspernatur, eius dolorem natus consequatur magnam corrupti dolore vitae quos! Reprehenderit asperiores repellat voluptatum fuga, maxime qui rem laboriosam praesentium unde fugit cum eligendi quibusdam voluptates excepturi suscipit itaque ducimus voluptas soluta quisquam natus corporis optio. Vitae quasi harum quas, libero consequatur dolores deleniti repudiandae dolorum, rerum eaque officia, placeat in atque quo! Nihil exercitationem hic officiis corporis eligendi architecto suscipit enim iusto ea mollitia culpa consequuntur officia quibusdam voluptatum veniam nostrum et quis, quidem possimus neque perferendis fugiat. Asperiores error, nobis, natus laborum beatae consectetur minima id similique quos cumque et obcaecati itaque quis. Eos, quod asperiores. Quasi recusandae id dolore dicta, inventore modi nihil quis at, impedit dolorem magni doloremque placeat quisquam nesciunt odit soluta ipsum sed quia officia reiciendis deleniti, optio omnis? Nesciunt repellendus, quisquam dolores, nobis labore officiis aliquid at cum nisi totam, sapiente atque praesentium quis aspernatur eligendi doloribus harum nulla. Magni quis repellat fugiat laudantium natus asperiores corrupti alias, voluptates ea vitae accusantium a nesciunt. Illum a sit doloremque odit, hic eum deleniti velit tenetur nihil harum non minus nobis! Distinctio doloremque in sint laudantium fugit sit recusandae illo voluptates quisquam doloribus aliquam molestiae, non quae dolores suscipit consectetur natus repellendus tenetur obcaecati adipisci praesentium iusto beatae eos aperiam. Consequatur mollitia voluptate unde animi sequi ut veritatis reiciendis consequuntur cumque ad suscipit necessitatibus dicta ipsum saepe amet optio, sapiente eaque veniam dolor deserunt! Error, et quidem minima optio ipsam sunt recusandae facilis vero explicabo consequatur, atque autem non facere dolorum soluta pariatur inventore quia natus voluptates laudantium accusamus labore quod delectus. Consequuntur reiciendis asperiores, eum odit libero quam blanditiis hic. Exercitationem, asperiores obcaecati reiciendis quisquam aliquid qui sed praesentium voluptas, molestiae sunt aperiam minus suscipit facilis voluptates deserunt vitae officiis libero fuga? Perspiciatis error ipsum animi quis molestias molestiae fugit, quas a similique ex nostrum corrupti assumenda magnam voluptas facere provident illum magni iusto aut ullam fugiat ea. Aperiam ducimus fugiat distinctio, mollitia ipsum provident hic temporibus ea. Culpa delectus unde pariatur vero molestiae eum autem quasi eaque ad repellat, doloremque officia corrupti explicabo cupiditate rerum molestias dolorum incidunt aliquid, voluptate eligendi expedita? Consequatur nihil facere aspernatur saepe repellat enim assumenda porro obcaecati tempore odio molestiae repudiandae blanditiis ad minima animi accusamus voluptatum illo a earum doloremque facilis, veritatis vitae eaque atque? Sit quisquam repudiandae quo dolores. Natus, fuga quidem autem voluptatibus deleniti temporibus explicabo doloremque facilis nemo est! Deleniti, tempora? Qui vel blanditiis quisquam nisi deleniti nemo debitis ut asperiores minima, alias dolore, eveniet sint aspernatur eius eum ad iure! Sed aliquid maxime, porro consequuntur veniam, sequi, perferendis distinctio aliquam possimus officia illo provident nulla eius quod est iste iure repellat. Culpa nesciunt corporis doloribus iure minus expedita vero deleniti, perspiciatis, numquam earum a tenetur, consectetur tempora? A numquam, veritatis doloremque dicta, nesciunt pariatur rem vero ut natus laudantium culpa recusandae, perferendis nisi sed! Tempore minima mollitia ex similique consectetur maiores! Nihil, aliquam dolores. Non voluptatibus aliquam deserunt aperiam odio aut illo quasi, soluta mollitia, ex rerum vel porro in distinctio alias quaerat ab dolorem laborum nostrum. Fugiat voluptatum corporis aperiam. Cum aliquam eaque quam, architecto ad sunt quaerat ex earum exercitationem placeat alias commodi quo sapiente officiis animi minima eum, voluptatum ducimus consectetur quidem fuga labore deserunt! Facilis velit placeat porro delectus, et eos!</p>
 
-        <section>
-            <h2>O que faz o R.L.M</h2>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam perspiciatis, molestiae hic consequuntur quidem quo laborum cupiditate quisquam provident ex assumenda saepe reprehenderit inventore facilis minus! Incidunt est deleniti aliquam nisi, voluptates eum accusantium? Temporibus minima numquam ipsa earum architecto suscipit, corporis, delectus voluptates, reiciendis expedita harum repudiandae corrupti ex!</p>
-            </div>
+        <section class="secClassMain">
+                <div class="component">
+                    <h2>O que faz o R.L.M</h2>
+                    <div>
+                        <p>A L.R.M foi criada com o propósito de ajudar as pessoas a reciclarem.</p>
+                        <p>Apesar de várias tentativas de várias pessoas/empresas para o mundo não ficar poluido, nunca tivemos um resultado preciso e eficaz, então para reduzir drasticamente a poluição, criamos a Lixo Reciclável Monetizado ( L.R.M ).</p>
+                        <p>Incentivamos as pessoas a reciclarem, e recompensamos elas com pagamentos determinados, uma excelente opção para quem quer ganhar uma renda extra.</p>
+                        <button class="verMais">
+                            <a href="../login/login.html">Ver mais</a>
+                        </button>
+                    </div>
+                </div>
         </section>
 
-        <section id="containerInfo">
+        <section class="secClassMain" id="containerInfo">
             <h2>Nossas funções</h2>
-            <div>
-                <img src="" alt="">
-                <div>
-                    <h3>Coletores</h3>
+            <div class="flexSquare">
+                <div class="square">
+                    <img src="../../img/IMG_7485.JPG" alt="">
                     <div>
-                        <!--CONTENT COLETORES-->
-                        <button>Seja um coletor</button>
+                        <h3>Coletores</h3>
+                        <div>
+                            <!--CONTENT COLETORES-->
+                            <button class="buttonBe">
+                                <a href="">Seja um coletor</a>
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <div>
-                <img src="" alt="">
-                <div>
-                    <h3>Acumulador</h3>
+    
+                <div class="square">
+                    <img src="../../img/IMG_7498.JPG" alt="">
                     <div>
-                        <!--CONTENT ACUMULADOR-->
-                        <button>Seja um acumulador</button>
+                        <h3>Acumulador</h3>
+                        <div>
+                            <!--CONTENT ACUMULADOR-->
+                            <button class="buttonBe">
+                                <a href="">Seja um acumulador</a>
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <div>
-                <img src="" alt="">
-                <div>
-                    <h3>Empresas</h3>
+    
+                <div class="square">
+                    <img src="../../img/IMG_7661.jpg" alt="">
                     <div>
-                        <!--CONTENT EMPRESA-->
-                        <button>Seja uma empresa</button>
+                        <h3>Empresas</h3>
+                        <div>
+                            <!--CONTENT EMPRESA-->
+                            <button class="buttonBe">
+                                <a href="">Seja uma empresa</a>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
