--- a/pags/sobre/sobre.html
+++ b/pags/sobre/sobre.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="../../JS/geral/geral.js" defer></script>
     <script src="../../JS/sobre/sobre.js" defer></script>
+    <script src="../../JS/jquery.js"></script>
     <title>LRM - criar conta</title>
 </head>
 <body>
