--- a/pags/sobre/sobre.html
+++ b/pags/sobre/sobre.html
@@ -79,9 +79,9 @@
                 <div class="component">
                     <h2>O que faz o R.L.M</h2>
                     <div>
-                        <p>A L.R.M foi criada com o propósito de ajudar as pessoas a reciclarem.</p>
-                        <p>Apesar de várias tentativas de várias pessoas/empresas para o mundo não ficar poluido, nunca tivemos um resultado preciso e eficaz, então para reduzir drasticamente a poluição, criamos a Lixo Reciclável Monetizado ( L.R.M ).</p>
-                        <p>Incentivamos as pessoas a reciclarem, e recompensamos elas com pagamentos determinados, uma excelente opção para quem quer ganhar uma renda extra.</p>
+                        <p class="sentences">A L.R.M foi criada com o propósito de ajudar as pessoas a reciclarem.</p>
+                        <p class="sentences">Apesar de várias tentativas de várias pessoas/empresas para o mundo não ficar poluido, nunca tivemos um resultado preciso e eficaz, então para reduzir drasticamente a poluição, criamos a Lixo Reciclável Monetizado ( L.R.M ).</p>
+                        <p class="sentences">Incentivamos as pessoas a reciclarem, e recompensamos elas com pagamentos determinados, uma excelente opção para quem quer ganhar uma renda extra.</p>
                         <button class="verMais">
                             <a href="../login/login.html">Ver mais</a>
                         </button>
