--- a/pags/login/login.html
+++ b/pags/login/login.html
@@ -14,7 +14,10 @@
     <header>
         <div class="head">
             <div style="width: 300px; display: flex; flex-direction: row; align-items: center;">
-                <h1>LRM</h1>
+                <div style="text-align: center;">
+                    <span>L.R.M</span>
+                    <div style="font-size: 0.5em;">Lixo reciclável monetizado</div>
+                </div>
                 <img style="width: 50px; height: 50px;" src="../../img/IMG_7547.PNG" alt="">
             </div>
             <div class="containerMenu" id="menuBtn">
