--- a/pags/sobre/sobre.html
+++ b/pags/sobre/sobre.html
@@ -17,7 +17,7 @@
             <div style="width: 300px; display: flex; flex-direction: row; align-items: center;">
                 <div style="text-align: center;">
                     <span>L.R.M</span>
-                    <div>Teste</div>
+                    <div style="font-size: 0.5em;">Lixo reciclável monetizado</div>
                 </div>
                 <img style="width: 50px; height: 50px;" src="../../img/IMG_7547.PNG" alt="">
             </div>
