--- a/pags/sobre/sobre.html
+++ b/pags/sobre/sobre.html
@@ -83,7 +83,7 @@
                         <p class="sentences">Apesar de várias tentativas de várias pessoas/empresas para o mundo não ficar poluido, nunca tivemos um resultado preciso e eficaz, então para reduzir drasticamente a poluição, criamos a Lixo Reciclável Monetizado ( L.R.M ).</p>
                         <p class="sentences">Incentivamos as pessoas a reciclarem, e recompensamos elas com pagamentos determinados, uma excelente opção para quem quer ganhar uma renda extra.</p>
                         <button class="verMais">
-                            <a href="../login/login.html">Ver mais</a>
+                            <a href="../login/login.html">Quero participar !</a>
                         </button>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                         <div>
                             <!--CONTENT COLETORES-->
                             <button class="buttonBe">
-                                <a href="">Seja um coletor</a>
+                                <a href="../login/login.html">Seja um coletor</a>
                             </button>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                         <div>
                             <!--CONTENT ACUMULADOR-->
                             <button class="buttonBe">
-                                <a href="">Seja um acumulador</a>
+                                <a href="../login/login.html">Seja um acumulador</a>
                             </button>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                         <div>
                             <!--CONTENT EMPRESA-->
                             <button class="buttonBe">
-                                <a href="">Seja uma empresa</a>
+                                <a href="../login/login.html">Seja uma empresa</a>
                             </button>
                         </div>
                     </div>
